--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <main>
       <section class="description" data-speed="140">
+       
         <div class="loading illustration layers js-pral" data-speed="70">
           <div class="illustr">
             <img
@@ -105,6 +106,7 @@
               height="503"
             />
             <div class="marginator">
+             
               <img class="btnImg" src="./images/btnPlay.png" alt="" />
               <div class="over_play" onclick="openVideo()"></div>
               <div class="p-wrapper">
@@ -131,6 +133,8 @@
             </div>
           </div>
         </div>
+        <div class="layer__bg-img"></div>
+
         <div class="desc-bg">
           <div class="description__container">
             <div class="description__first">
@@ -2191,7 +2195,11 @@
           <h2 class="clients__title">Our clients are just like you</h2>
           <div class="clients__baner">
             <div class="slider">
-              <div class="client__slide" id="slide1ac" data-src="https://lindseymarkus.com">
+              <div
+                class="client__slide"
+                id="slide1ac"
+                data-src="https://lindseymarkus.com"
+              >
                 <div class="clients__baner__content">
                   <div class="client_slide_text_content">
                     <div class="clients__baner__text-contain">
@@ -2210,29 +2218,37 @@
                         What made difference
                       </h3>
                     </div>
-                    <ul class="clients__list">
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                    </ul>
+                    <div class="mobile__list__contain">
+                      <button
+                        class="client__list__btn prev__client__btn"
+                      ></button>
+                      <ul class="clients__list">
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            ggggggNeed tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            ffffffffNeed tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                      </ul>
+                      <button
+                        class="client__list__btn next__client__btn"
+                      ></button>
+                    </div>
                   </div>
                 </div>
                 <div class="img__container" id="img_container">
@@ -2258,7 +2274,11 @@
                   />
                 </div>
               </div>
-              <div class="client__slide" id="slide2ac" data-src="https://wilshiretime.com">
+              <div
+                class="client__slide"
+                id="slide2ac"
+                data-src="https://wilshiretime.com"
+              >
                 <div class="clients__baner__content">
                   <div class="client_slide_text_content">
                     <div class="clients__baner__text-contain">
@@ -2277,30 +2297,37 @@
                         What made difference
                       </h3>
                     </div>
-
-                    <ul class="clients__list">
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                    </ul>
+                    <div class="mobile__list__contain">
+                      <button
+                        class="client__list__btn prev__client__btn"
+                      ></button>
+                      <ul class="clients__list">
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                      </ul>
+                      <button
+                        class="client__list__btn next__client__btn"
+                      ></button>
+                    </div>
                   </div>
                 </div>
                 <div class="img__container" id="img_container">
@@ -2326,7 +2353,11 @@
                   />
                 </div>
               </div>
-              <div class="client__slide" id="slide3ac" data-src="https://mysolarbrick.com">
+              <div
+                class="client__slide"
+                id="slide3ac"
+                data-src="https://mysolarbrick.com"
+              >
                 <div class="clients__baner__content">
                   <div class="client_slide_text_content">
                     <div class="clients__baner__text-contain">
@@ -2345,30 +2376,37 @@
                         What made difference
                       </h3>
                     </div>
-
-                    <ul class="clients__list">
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                    </ul>
+                    <div class="mobile__list__contain">
+                      <button
+                        class="client__list__btn prev__client__btn"
+                      ></button>
+                      <ul class="clients__list">
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                      </ul>
+                      <button
+                        class="client__list__btn next__client__btn"
+                      ></button>
+                    </div>
                   </div>
                 </div>
                 <div class="img__container" id="img_container">
@@ -2394,7 +2432,11 @@
                   />
                 </div>
               </div>
-              <div class="client__slide" id="slide4ac" data-src="https://romamassage.me">
+              <div
+                class="client__slide"
+                id="slide4ac"
+                data-src="https://romamassage.me"
+              >
                 <div class="clients__baner__content">
                   <div class="client_slide_text_content">
                     <div class="clients__baner__text-contain">
@@ -2413,30 +2455,37 @@
                         What made difference
                       </h3>
                     </div>
-
-                    <ul class="clients__list">
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                    </ul>
+                    <div class="mobile__list__contain">
+                      <button
+                        class="client__list__btn prev__client__btn"
+                      ></button>
+                      <ul class="clients__list">
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                      </ul>
+                      <button
+                        class="client__list__btn next__client__btn"
+                      ></button>
+                    </div>
                   </div>
                 </div>
                 <div class="img__container" id="img_container">
@@ -2462,7 +2511,11 @@
                   />
                 </div>
               </div>
-              <div class="client__slide" id="slide5ac" data-src="https://wilshiretime.com">
+              <div
+                class="client__slide"
+                id="slide5ac"
+                data-src="https://wilshiretime.com"
+              >
                 <div class="clients__baner__content">
                   <div class="client_slide_text_content">
                     <div class="clients__baner__text-contain">
@@ -2481,30 +2534,37 @@
                         What made difference
                       </h3>
                     </div>
-
-                    <ul class="clients__list">
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                      <li class="clients__item">
-                        <h4 class="clients__item__name">Unlimited updates</h4>
-                        <p class="clients__item__descriptions">
-                          Need tweaks or products added? With us your website is
-                          always up to date.
-                        </p>
-                      </li>
-                    </ul>
+                    <div class="mobile__list__contain">
+                      <button
+                        class="client__list__btn prev__client__btn"
+                      ></button>
+                      <ul class="clients__list">
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                        <li class="clients__item">
+                          <h4 class="clients__item__name">Unlimited updates</h4>
+                          <p class="clients__item__descriptions">
+                            Need tweaks or products added? With us your website
+                            is always up to date.
+                          </p>
+                        </li>
+                      </ul>
+                      <button
+                        class="client__list__btn next__client__btn"
+                      ></button>
+                    </div>
                   </div>
                 </div>
                 <div class="img__container" id="img_container">
@@ -2569,21 +2629,14 @@
               </button>
             </div>
             <div class="client__btn-contain__mob">
-              <button class="client__btn__mob bgc1" id="slide1">
-
-              </button>
-              <button class="client__btn__mob bgc2" id="slide2">
-
-              </button>
-              <button class="client__btn__mob bgc3" id="slide3">
-
-              </button>
-              <button class="client__btn__mob bgc4" id="slide4">
-
-              </button>
-              <button class="client__btn__mob bgc5" id="slide5">
-
-              </button>
+              <button
+                class="client__btn__mob bgc1 client__btn__mob--active"
+                id="slide1"
+              ></button>
+              <button class="client__btn__mob bgc2" id="slide2"></button>
+              <button class="client__btn__mob bgc3" id="slide3"></button>
+              <button class="client__btn__mob bgc4" id="slide4"></button>
+              <button class="client__btn__mob bgc5" id="slide5"></button>
             </div>
           </div>
         </div>
